future refactoring? now past refactoring in some part

--- a/minimal_shell.html
+++ b/minimal_shell.html
@@ -24,8 +24,10 @@
         var Module = {
             canvas: document.getElementById('canvas')
         };
-        
-        
+        Module['locateFile'] = function(path, prefix) {
+          // Use the root path for all files
+          return "/" + path;
+        };
     </script>
     {{{ SCRIPT }}}
 </body>
